kubernetes/enrouting_50-50.yaml
################################################################################
#  ENROUTING - V1 (100%)                                                       #
################################################################################
---

### Drinks
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: drinks-enrouting-50-50
spec:
  hosts:
    - drinks
  http:
    - route:
      - destination:
          host: drinks
          subset: v1
        weight: 50
      - destination:
          host: drinks
          subset: v2
        weight: 50

---

### Cracks
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: cracks-enrouting-50-50
spec:
  hosts:
    - cracks
  http:
    - route:
      - destination:
          host: cracks
          subset: v1
        weight: 50
      - destination:
          host: cracks
          subset: v2
        weight: 50

---

### Router
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: router-enrouting-50-50
spec:
  hosts:
    - router
  http:
    - route:
      - destination:
          host: router
          subset: v1
        weight: 50
      - destination:
          host: router
          subset: v2
        weight: 50

---

### Frontend
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: frontend-enrouting-50-50
spec:
  hosts:
    - frontend
  http:
    - route:
      - destination:
          host: frontend
          subset: v1
        weight: 50
      - destination:
          host: frontend
          subset: v2
        weight: 50
