kubernetes/virtual_service_router.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: router
spec:
  hosts:
    - "*"
  gateways:
    - services-gateway
  http:
    - match:
        - uri:
            prefix: /drinks
        - uri:
            prefix: /cracks
      route:
        - destination:
            host: router
            port:
              number: 4002
---
